--- a/Duckie/appsettings.json
+++ b/Duckie/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "1037561980233-4u6mq2oa2mk3jk6b6u8uo82h90vi1dv0.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
